gewe更新了，我也跟着更新了下

--- a/config.json
+++ b/config.json
@@ -5,15 +5,15 @@
     "coze_bot_id": "7472418615191896074",
     "debug": false,
     "dify_api_base": "http://localhost/v1",
-    "dify_api_key": "app-bLLTcRZ8l67LQidSo67B68CH",
+    "dify_api_key": "app-mRKILVLI3nAh4Owcxdqh8tGc",
     "dify_app_type": "chatbot",
-    "gewechat_app_id": "wx_h_wNG48atr8kFFQWkELQ2",
+    "gewechat_app_id": "wx_VzTqgHBeCxViPUHpEqbnT",
     "gewechat_base_url": "http://192.168.31.235:2531/v2/api",
     "gewechat_callback_url": "http://192.168.31.235:9919/v2/api/callback/collect",
     "gewechat_download_url": "http://192.168.31.235:2532/download",
-    "gewechat_token": "934c7ad0b1994c13a52374f5be9f39fb",
-    "message_buffer_second": 10,
-    "model": "coze",
+    "gewechat_token": "77454c4c65a94089919faffcc5d58749",
+    "message_buffer_second": 3,
+    "model": "dify",
     "nick_name_black_list": [],
     "sikulix_describe": "wec",
     "wxid_black_list": [],
