--- a/requirements.txt
+++ b/requirements.txt
@@ -10,10 +10,15 @@ web.py
 linkai>=0.0.6.0
 cozepy==0.6
 wechatpy
-JPype1==1.5.2
 pyperclip==1.9.0
 pystray==0.19.5
-wcferry==39.3.3.2
 watchdog==6.0.0
 flet==0.27.4
 pilk==0.2.4
+# 企微接入
+JPype1==1.5.2
+# 个微wcf接入
+wcferry==39.3.3.2
+# 企微定时消息
+schedule==1.2.2
+apscheduler==3.11.0
