文档界面ui施工完成

--- a/config_grouping.json
+++ b/config_grouping.json
@@ -2,7 +2,7 @@
   "channel_type":{
     "wechat_common": {
       "message_buffer_second": {
-        "tittle": "消息缓冲时间",
+        "tittle": "消息缓冲时间*",
         "describe": "用来将用户的消息进行合并，防止短句多次调用AI",
         "type": "int"
       },
@@ -10,6 +10,38 @@
         "tittle": "调试模式",
         "describe": "调试模式会输出更详细的日志",
         "type": "bool"
+      }
+    },
+    "gewechat": {
+      "gewechat_app_id": {
+        "tittle": "gewe渠道ID",
+        "describe": "首次登录可留空,自动获取",
+        "type": "str"
+      },
+      "gewechat_base_url": {
+        "tittle": "gewe地址*",
+        "describe": "gewe服务的API地址，http://本机ip:2531/v2/api",
+        "type": "str"
+      },
+      "gewechat_callback_url": {
+        "tittle": "gewe回调地址*",
+        "describe": "回调地址，http://本机ip:9919/v2/api/callback/collect",
+        "type": "str"
+      },
+      "gewechat_download_url": {
+        "tittle": "文件下载地址*",
+        "describe": "文件下载地址，http://本机ip:2532/download",
+        "type": "str"
+      },
+      "gewechat_token": {
+        "tittle": "gewe令牌",
+        "describe": "首次登录可留空,自动获取",
+        "type": "str"
+      },
+      "wxid_recip_note": {
+        "tittle": "接受通知的wxid",
+        "describe": "在对话结束之后会发送给这个微信一个通知消息，并且将对话结束的用户添加至AI不再处理的列表",
+        "type": "str"
       },
       "nick_name_black_list": {
         "tittle": "不回复的用户（微信名）",
@@ -20,38 +52,6 @@
         "tittle": "不回复的用户（wxid）",
         "describe": "这部分用户AI不会进行回复",
         "type": "list"
-      },
-      "wxid_recip_note": {
-        "tittle": "接受通知的wxid",
-        "describe": "在对话结束之后会发送给这个微信一个通知消息，并且将对话结束的用户添加至AI不再处理的列表",
-        "type": "str"
-      }
-    },
-    "gewechat": {
-      "gewechat_app_id": {
-        "tittle": "gewe渠道ID",
-        "describe": "首次登录可留空,自动获取",
-        "type": "str"
-      },
-      "gewechat_base_url": {
-        "tittle": "gewe地址",
-        "describe": "gewe服务的API地址，http://本机ip:2531/v2/api",
-        "type": "str"
-      },
-      "gewechat_callback_url": {
-        "tittle": "gewe回调地址",
-        "describe": "回调地址，http://本机ip:9919/v2/api/callback/collect",
-        "type": "str"
-      },
-      "gewechat_download_url": {
-        "tittle": "文件下载地址",
-        "describe": "文件下载地址，http://本机ip:2532/download",
-        "type": "str"
-      },
-      "gewechat_token": {
-        "tittle": "gewe令牌",
-        "describe": "首次登录可留空,自动获取",
-        "type": "str"
       }
     },
     "sikulix": {
@@ -63,8 +63,8 @@
     },
     "wcf": {
       "wcf_describe": {
-        "tittle": "高贵的wcf不需要任何设置",
-        "describe": "高贵的wcf不需要任何设置",
+        "tittle": "wcf不需要任何设置",
+        "describe": "wcf不需要任何设置",
         "type": "str"
       }
     },
@@ -91,17 +91,17 @@
   "model":{
     "dify": {
       "dify_api_base": {
-        "tittle": "Dify地址",
+        "tittle": "Dify地址*",
         "describe": "Dify的API地址",
         "type": "str"
       },
       "dify_api_key": {
-        "tittle": "Dify密钥",
+        "tittle": "Dify密钥*",
         "describe": "Dify的API密钥",
         "type": "str"
       },
       "dify_app_type": {
-        "tittle": "Dify应用类型",
+        "tittle": "Dify应用类型*",
         "describe": "dify助手类型 chatbot(对应聊天助手或对话流)/agent(对应Agent)/workflow(对应工作流，则默认为chatbot",
         "type": "str"
       },
@@ -118,17 +118,17 @@
     },
     "coze": {
       "coze_api_base": {
-        "tittle": "Coze地址",
+        "tittle": "Coze地址*",
         "describe": "Coze的API地址",
         "type": "str"
       },
       "coze_api_key": {
-        "tittle": "Coze密钥",
+        "tittle": "Coze密钥*",
         "describe": "Coze的API密钥",
         "type": "str"
       },
       "coze_bot_id": {
-        "tittle": "CozeBotID",
+        "tittle": "CozeBotID*",
         "describe": "你的Coze机器人ID",
         "type": "str"
       },
@@ -157,12 +157,12 @@
     },
     "openai": {
       "open_ai_api_key": {
-        "tittle": "API密钥",
+        "tittle": "API密钥*",
         "describe": "你的AI的API密钥",
         "type": "str"
       },
       "open_ai_api_base": {
-        "tittle": "API地址",
+        "tittle": "API地址*",
         "describe": "你的AI的API地址",
         "type": "str"
       },
