--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ pyperclip==1.9.0
 pystray==0.19.5
 watchdog==6.0.0
 flet==0.27.4
+# 语音消息处理
 pilk==0.2.4
 # 企微接入
 JPype1==1.5.2
@@ -24,3 +25,5 @@ schedule==1.2.2
 apscheduler==3.11.0
 # verify
 jaraco.functools
+# xunfei语音
+websocket-client==1.2.0
